--- a/index.html
+++ b/index.html
@@ -1,154 +1,158 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="header">
-        <img src="images/trybewarts-header-logo.svg" alt="logo tipo Trybewarts" class="trybewarts-header-logo">
-        <h1 id="trybewarts-header-title" >Trybewarts</h1>
-        <form class="trybewarts-login">
-            <input id="login" type="email" placeholder="Login">
-            <input id="senha" type="password" placeholder="Senha">
-            <button id="enviar" type="submit">Logar</button>
-        </form>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css" />
+    <title>Trybewarts</title>
+  </head>
+  <body>
+    <header class="header container">
+      <img
+        src="images/trybewarts-header-logo.svg"
+        alt="Trybewarts Logo"
+        class="trybewarts-header-logo"
+      />
+      <h1 class="trybewarts-header-title" id="trybewarts-header-title">Trybewarts</h1>
+      <form class="trybewarts-login" data-js="trybewarts-form">
+        <input class="trybewarts-login-email" type="email" placeholder="Login" id="email">
+        <input class="trybewarts-login-senha" type="password" placeholder="Senha" id="senha">
+        <button class="trybewarts-login-entrar">Entrar</button>
+      </form>
     </header>
-    <main class="conteudo">
-        <form id="evaluation-form">
-          <div class="conteudo-enviar"></div>
-            <div class="container-row-one">
-                <label for="input-name">Nome</label>
-                <input type="text" id="input-name" placeholder="Nome">
-                <label for="input-lastname">Sobenome</label>
-                <input type="text" id="input-lastname" placeholder="Sobrenome">
+    <main class="main container">
+      <div class="main-content">
+        <div class="content-wrapper">
+          <form class="evaluation-form" id="evaluation-form" data-js="evaluation-form">
+            <input class="input-name"  name="inputName" type="text" placeholder="Nome" id="input-name">
+            <input class="input-lastname" name="inputLastname" type="text" placeholder="Sobrenome" id="input-lastname">
+            <input class="input-email" name="email" type="email" placeholder="Email" id="input-email">
+            <div class="select-container">
+              <label class="evaluation-form-label" for="house">
+                Escolha uma casa
+              </label>
+              <select class="evaluation-form-select" id="house">
+                <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+                <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+                <option value="Corvinode" id="corvinode-house">Corvinode</option>
+                <option value="Pytherina" id="pytherina-house">Pytherina</option>
+              </select>
             </div>
-            <div class="container-row-two">
-                <label for="input-email">Email</label>
-                <input type="text" id="input-email" placeholder="Email">
-                <label for="house">Casa</label>
-                <select id="house">
-                    <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-                    <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-                    <option value="Corvinode" id="corvinode-house">Corvinode</option>
-                    <option value="Pytherina" id="pytherina-house">Pytherina</option>
-                </select>
-            </div>
-            <div class="caixa">
-              <div class="caixa-lista">
-                <label id="label-family">Qual sua família?</label>
-                <div class="caixa-lista-itens">
-                  <div>
-                    <input type="radio" name="family" id="frontend" value="Frontend">
-                    <label for="frontend">Frontend</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="family" id="backend" value="Backend">
-                    <label for="backend">Backend</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="family" id="fullstack" value="FullStack">
-                    <label for="fullstack">Fullstack</label>
-                  </div>
-                </div>
+          </form>
+          <section class="family-learn">
+            <section class="family container">
+              <p class="family-paragraph" id="label-family">Qual sua família?</p>
+              <div class="family-labels">
+                <label class="family-label" for="Frontend">
+                  <input class="radio-input" type="radio" name="family" id="Frontend" value="Frontend" data-js="radio-family">
+                  Frontend
+                </label>
+                <label class="family-label" for="Backend">
+                  <input class="radio-input" type="radio" name="family" id="Backend" value="Backend" data-js="radio-family">
+                  Backend
+                </label>
+                <label class="family-label" for="Fullstack">
+                  <input class="radio-input" type="radio" name="family" id="Fullstack" value="FullStack" data-js="radio-family">
+                  Fullstack
+                </label>
               </div>
-              <div class="caixa-lista">
-                <label id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
-                <div class="caixa-lista-checkbox">
-                  <div class="caixa-lista-checkbox-list">
-                    <input type="checkbox" name="content" class="subject" id="hofs" value="HoFs">
-                    <label for="hofs">HoFs</label>
-                  </div>
-                  <div  class="caixa-lista-checkbox-list">
-                    <input type="checkbox" name="content" class="subject" id="jest" value="Jest">
-                    <label for="jest">Jest</label>
-                  </div>
-                  <div  class="caixa-lista-checkbox-list">
-                    <input type="checkbox" name="content" class="subject" id="promises" value="Promises">
-                    <label for="promises">Promises</label>
-                  </div>
-                  <div  class="caixa-lista-checkbox-list">
-                    <input type="checkbox" name="content" class="subject" id="react" value="React">
-                    <label for="react">React</label>
-                  </div>
-                  <div  class="caixa-lista-checkbox-list">
-                    <input type="checkbox" name="content" class="subject" id="sql" value="SQL">
-                    <label for="sql">SQL</label>
-                  </div>
-                  <div  class="caixa-lista-checkbox-list">
-                    <input type="checkbox" name="content" class="subject" id="python" value="Python">
-                    <label for="python">Python</label>
-                  </div>
-                </div>
+            </section>
+            <section class="learn container">
+              <p class="learn-paragraph" id="label-content">Qual conteúdo você está com mais vontade de aprender?</p>
+              <div class="learn-labels">
+                <label class="learn-label" for="HoFs">
+                  <input class="learn-input" type="checkbox" data-js="learn-input" id="HoFs" name="HoFs" value="HoFs">
+                  HoFs
+                </label>
+                <label class="learn-label" for="Jest">
+                  <input class="learn-input" type="checkbox" data-js="learn-input" id="Jest" name="Jest" value="Jest">
+                  Jest
+                </label>
+                <label class="learn-label" for="Promises">
+                  <input class="learn-input" type="checkbox" data-js="learn-input" id="Promises" name="Promises" value="Promises">
+                  Promises
+                </label>
+                <label class="learn-label" for="React">
+                  <input class="learn-input" type="checkbox" data-js="learn-input" id="React" name="React" value="React">
+                  React
+                </label>
+                <label class="learn-label" for="SQL">
+                  <input class="learn-input" type="checkbox" data-js="learn-input" id="SQL" name="SQL" value="SQL">
+                  SQL
+                </label>
+                <label class="learn-label" for="Python">
+                  <input class="learn-input" type="checkbox" data-js="learn-input" id="Python" name="Python" value="Python">
+                  Python
+                </label>
               </div>
+            </section>
+          </section>
+          <section class="evaluation container">
+            <p class="evaluation-paragraph" id="label-rate">
+              Como você avalia a Trybewarts?
+            </p>
+            <div class="evaluation-labels">
+              <label for="1" class="evaluation-label">
+                <input type="radio" name="rate" value="1" id="1">1
+              </label>
+              <label for="2" class="evaluation-label">
+                <input type="radio" name="rate" value="2" id="2">2
+              </label>
+              <label for="3" class="evaluation-label">
+                <input type="radio" name="rate" value="3" id="3">3
+              </label>
+              <label for="4" class="evaluation-label">
+                <input type="radio" name="rate" value="4" id="4">4
+              </label>
+              <label for="5" class="evaluation-label">
+                <input type="radio" name="rate" value="5" id="5">5
+              </label>
+              <label for="6" class="evaluation-label">
+                <input type="radio" name="rate" value="6" id="6">6
+              </label>
+              <label for="7" class="evaluation-label">
+                <input type="radio" name="rate" value="7" id="7">7
+              </label>
+              <label for="8" class="evaluation-label">
+                <input type="radio" name="rate" value="8" id="8">8
+              </label>
+              <label for="9" class="evaluation-label">
+                <input type="radio" name="rate" value="9" id="9">9
+              </label>
+              <label for="10" class="evaluation-label">
+                <input type="radio" name="rate" value="10" id="10">10
+              </label>
             </div>
-            <div class="caixa-avaliacao">
-              <label id="label-rate">Como você avalia a Trybewarts?</label>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="um" value="1">
-                  <label for="um">1</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="dois" value="2">
-                  <label for="dois">2</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="tres" value="3">
-                  <label for="tres">3</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="quatro" value="4">
-                  <label for="quatro">4</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="cinco" value="5">
-                  <label for="cinco">5</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="seis" value="6">
-                  <label for="seis">6</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="sete" value="7">
-                  <label for="sete">7</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="oito" value="8">
-                  <label for="oito">8</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="nove" value="9">
-                  <label for="nove">9</label>
-                </div>
-                <div class="caixa-avaliacao-radio">
-                  <input type="radio" name="rate" id="dez" value="10">
-                  <label for="dez">10</label>
-                </div>
+          </section>
+          <section class="comments container textarea">
+            <div class="comments-wrapper">
+              <label class="comments-label" for="comments-textarea">
+                Deixe seu comentário:
+              </label>
+              <textarea class="comments-textarea" id="comments-textarea" maxlength="500" cols="20" rows="5" data-js="comments-textarea"></textarea>
             </div>
-            <div class="caixa-comentario">
-              <label for="comentario" class="textarea">Deixe seu comentário:</label>
-              <textarea name="textarea" id="textarea" cols="80" rows="10" maxlength="500"></textarea>
-              <div class="caixa-comentario-contador">
-                <span id="counter">500</span>
-              </div>
-            </div>
-            <div class="caixa-termos">
-              <label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
-              <input type="checkbox" name="checkbox" id="agreement">
-            </div>
-            <div class="caixa-enviar">
-              <button id="submit-btn" type="submit">Enviar</button>
-            </div>
-        </form>
-        <!-- <div class="conteudo-enviar"></div> -->
-        <img src="images/trybewarts-colored.svg" alt="trybewarts brasão" id="trybewarts-forms-logo">
+            <span class="counter" id="counter" data-js="counter">500</span>
+          </section>
+          <section class="accord container">
+            <label class="agreement-infos" for="agreement" id="label-infos">
+              Você concorda com o uso das informações acima?
+            </label>
+            <input class="agreement-input" type="checkbox" data-js="agreement-input" id="agreement">
+          </section>
+          <div class="submit container">
+            <button class="submit-btn disabled" id="submit-btn" type="submit" disabled data-js="submit-btn">Enviar</button>
+          </div>
+        </div>
+        <aside>
+          <img class="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
+        </aside>
+      </div>
     </main>
-    <footer class="rodape">
-      <span>Direitos reservados à Trybewarts©</span>
+    <footer class="footer">
+      Direitos reservados à Trybewarts©
     </footer>
-    <script src="script.js"></script>
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
