--- a/index.html
+++ b/index.html
@@ -95,34 +95,34 @@
             </p>
             <div class="evaluation-labels">
               <label for="1" class="evaluation-label">
-                <input type="radio" name="rate" value="1" id="1">1
+                <input data-js="evaluation-input" type="radio" name="rate" value="1" id="1">1
               </label>
               <label for="2" class="evaluation-label">
-                <input type="radio" name="rate" value="2" id="2">2
+                <input data-js="evaluation-input" type="radio" name="rate" value="2" id="2">2
               </label>
               <label for="3" class="evaluation-label">
-                <input type="radio" name="rate" value="3" id="3">3
+                <input data-js="evaluation-input" type="radio" name="rate" value="3" id="3">3
               </label>
               <label for="4" class="evaluation-label">
-                <input type="radio" name="rate" value="4" id="4">4
+                <input data-js="evaluation-input" type="radio" name="rate" value="4" id="4">4
               </label>
               <label for="5" class="evaluation-label">
-                <input type="radio" name="rate" value="5" id="5">5
+                <input data-js="evaluation-input" type="radio" name="rate" value="5" id="5">5
               </label>
               <label for="6" class="evaluation-label">
-                <input type="radio" name="rate" value="6" id="6">6
+                <input data-js="evaluation-input" type="radio" name="rate" value="6" id="6">6
               </label>
               <label for="7" class="evaluation-label">
-                <input type="radio" name="rate" value="7" id="7">7
+                <input data-js="evaluation-input" type="radio" name="rate" value="7" id="7">7
               </label>
               <label for="8" class="evaluation-label">
-                <input type="radio" name="rate" value="8" id="8">8
+                <input data-js="evaluation-input" type="radio" name="rate" value="8" id="8">8
               </label>
               <label for="9" class="evaluation-label">
-                <input type="radio" name="rate" value="9" id="9">9
+                <input data-js="evaluation-input" type="radio" name="rate" value="9" id="9">9
               </label>
               <label for="10" class="evaluation-label">
-                <input type="radio" name="rate" value="10" id="10">10
+                <input data-js="evaluation-input" type="radio" name="rate" value="10" id="10">10
               </label>
             </div>
           </section>
