Add final styles and refactor the project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       </form>
     </header>
     <main class="main container">
-      <div class="main-content">
+      <div class="report" data-js="report">
+      </div>
+      <div class="main-content" data-js="main-content">
         <div class="content-wrapper">
           <form class="evaluation-form" id="evaluation-form" data-js="evaluation-form">
             <input class="input-name"  name="inputName" type="text" placeholder="Nome" id="input-name">
